--- a/noticias/core/templates/core/noticias/Salud.html
+++ b/noticias/core/templates/core/noticias/Salud.html
@@ -121,18 +121,22 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand d-block d-lg-none">
+            <a href="{% url 'index' %}" class="navbar-brand d-block d-lg-none">
                 <h1 class="m-0 display-4 text-uppercase text-primary">Biz<span class="text-white font-weight-normal">News</span></h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
-            </button> 
+            </button>
             <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav mr-auto py-0">
-                    <a href="{% url 'index' %}" class="nav-item nav-link active">Inicio</a>
+                    <a href="{% url 'index' %}" class="nav-item nav-link ">Inicio</a>
                     <a href="{% url 'category' %}" class="nav-item nav-link">Categoría</a>
-                    <a href="single.html" class="nav-item nav-link">Noticia Única</a>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contacto</a>
+                    <a href="{% url 'suscripcíon' %}" class="nav-item nav-link active">suscripción</a>
+                    <a href="{% url 'carrito' %}" class="nav-item nav-link">
+                        <img src="{% static 'core/img/carrito.png' %}" alt="Carrito" style="width: 34px; height: 34px;">
+                        <span id="cart-count" class="cart-count">0</span>
+                    </a>
                 </div>
                 <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
                     <input type="text" class="form-control border-0" placeholder="Keyword">
