--- a/noticias/core/templates/core/noticias/noticia 11.html
+++ b/noticias/core/templates/core/noticias/noticia 11.html
@@ -134,11 +134,7 @@
                     <a href="{% url 'index' %}" class="nav-item nav-link ">Inicio</a>
                     <a href="{% url 'category' %}" class="nav-item nav-link">Categoría</a>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contacto</a>
-                    <a href="{% url 'suscripcíon' %}" class="nav-item nav-link active">suscripción</a>
-                    <a href="{% url 'carrito' %}" class="nav-item nav-link">
-                        <img src="{% static 'core/img/carrito.png' %}" alt="Carrito" style="width: 34px; height: 34px;">
-                        <span id="cart-count" class="cart-count">0</span>
-                    </a>
+                    <a href="{% url 'suscripcíon' %}" class="nav-item nav-link ">suscripción</a>
                 </div>
                 <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
                     <input type="text" class="form-control border-0" placeholder="Keyword">
