--- a/noticias/core/templates/registration/register.html
+++ b/noticias/core/templates/registration/register.html
@@ -13,7 +13,12 @@
                 <form method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input type="submit" class="btn btn-primary" value="Registrarse">
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-primary" value="Registrarse">
+                    </div>
+                    <div class="form-group mt-2">
+                        <small class="text-muted">¿Olvidaste tu contraseña? <a href="{% url 'reset_password' %}">¡Crea una nueva!</a></small>
+                    </div>
                 </form>
             </div>
         </div>
